# Zeus

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  cli.py  config.py  design-system.hmtl  docker-compose.yml  manage.py  pyproject.toml
.django-stub-gen/: rule-tables.json
.github/workflows/: ci.yml
.neuraltape/: project.yaml
Dashboard Admin/app/: index.html
Dashboard Admin/zeus-video/: package.json
apps/companies/: admin.py  agent.py  audit.py  dna_critique.py  dna_enrichment.py  dna_numeric.py  dna_renderer.py  dna_schemas.py  dna_scoring.py  dna_validator.py  evidence.py  llm_client.py  models.py  onboarding_urls.py  product_enrichment.py  scraper.py  sector_archetypes.py  tasks.py  urls.py  views.py
apps/core/: admin.py  forms.py  metrics.py  middleware.py  models.py  observability.py  views.py
apps/zeus_admin/: apps.py  urls.py  views.py
config/: celery.py  test_urls.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
core/: __init__.py  dna_company.py  dna_family.py  exporters.py  kb_assembler.py  questionnaire.py  validator.py
docs/: deploy-runbook.md  ui-app-shell-regression-matrix.md  ui-mockup-app-shell.html  zeus-workflow-diagram.html
docs/plans/: 2026-06-26-zeus-piano-4-specialista.md
docs/releases/: 2026-07-app-shell.md
llm/: __init__.py  client.py
models/: __init__.py  schemas.py
models/templates/: comportamento_sistema.md.j2  dna_aziendale.md.j2  dna_famiglia.md.j2  index_kb.md.j2
parsers/: __init__.py  pdf.py
scripts/: production_preflight.sh
templates/account/: login.html  signup.html
templates/admin/: change_password.html
templates/core/: agent_chat.html  app_shell.html  app_shell_agent.html  app_shell_consistency_report.html  app_shell_dashboard.html  app_shell_dna_gap_questions.html  app_shell_dna_generating.html  app_shell_dna_processing.html  app_shell_dna_questions.html  app_shell_dna_review.html  base.html  (+39 more)
tests/: browser_support.py  conftest.py  test_agent.py  test_companies.py  test_company_tasks.py  test_core.py  test_fondamenta.py  test_health.py  test_observability.py  test_ui_app_shell_baseline.py  test_ui_browser_baseline.py  test_ui_visual.py  test_zeus_admin.py  ui_visual.py
utils/: __init__.py
(+99 files in other folders)
